--- a/src/vault.html
+++ b/src/vault.html
@@ -12,51 +12,14 @@
 
   <link rel="icon" href="//awsmedia.s3.amazonaws.com/favicon.ico" type="image/ico" />
   <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous" />
-
-  <style>
-
-    .navbar {
-      padding: .75rem;
-    }
-
-    .breadcrumbs {
-      font-size: 1.25rem!important;
-      font-weight: 500!important;
-    }
-
-    .breadcrumbs:hover {
-      color: #cdcdcd!important;
-    }
-
-    .font-small {
-      font-size: small!important;
-    }
-
-    .table {
-      word-break: break-all;
-    }
-
-    .raw:hover {
-      cursor: zoom-out;
-    }
-
-    .readable:hover {
-      cursor: zoom-in;
-    }
- 
-    .view:hover,
-    .download:hover {
-      color: #428bca;
-    }
-
-  </style>
+  <link rel="stylesheet" href="/vault.css" crossorigin="anonymous" />
 
   <script src="//code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js" integrity="sha256-G7A4JrJjJlFqP0yamznwPjAApIKPkadeHfyIwiaa9e0=" crossorigin="anonymous"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.23.0/moment.min.js" integrity="sha256-VBLiveTKyUZMEzJd6z2mhfxIqz3ZATCuVMawPZGzIfA=" crossorigin="anonymous"></script>
   <script src="//ashenm.github.io/CookieStorage/CookieStorage.min.js" integrity="sha384-JGWvhqe0sKT4Y2JqUvgqWuCq+EKsNcW0mk3SAAgwAybJP7vxqcNAxQ6UBJan5nm2" crossorigin="anonymous"></script>
-  <script src="//ashenm.github.io/S3Vault/amazon-cognito-auth.min.js"></script>
-  <script src="//ashenm.github.io/S3Vault/aws-sdk-2.384.0.min.js"></script>
+  <script src="/amazon-cognito-auth.min.js"></script>
+  <script src="/aws-sdk-2.384.0.min.js"></script>
 
   <!-- pollyfill sessionStorage -->
   <script>
@@ -73,7 +36,7 @@
 
   </script>
 
-  <script src="//ashenm.github.io/S3Vault/vault.min.js"></script>
+  <script src="/vault.min.js"></script>
 
 </head>
 <body>
