--- a/src/vault.html
+++ b/src/vault.html
@@ -10,49 +10,20 @@
 
   <title>Vault</title>
 
-  <link rel="icon" href="//awsmedia.s3.amazonaws.com/favicon.ico" type="image/ico" />
-  <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous" />
   <link rel="stylesheet" href="/vault.css" crossorigin="anonymous" />
+  <link rel="icon" href="//awsmedia.s3.amazonaws.com/favicon.ico" type="image/ico" />
 
-  <script src="//code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js" integrity="sha256-G7A4JrJjJlFqP0yamznwPjAApIKPkadeHfyIwiaa9e0=" crossorigin="anonymous"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.23.0/moment.min.js" integrity="sha256-VBLiveTKyUZMEzJd6z2mhfxIqz3ZATCuVMawPZGzIfA=" crossorigin="anonymous"></script>
-  <script src="//ashenm.github.io/CookieStorage/CookieStorage.min.js" integrity="sha384-JGWvhqe0sKT4Y2JqUvgqWuCq+EKsNcW0mk3SAAgwAybJP7vxqcNAxQ6UBJan5nm2" crossorigin="anonymous"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
   <script src="/amazon-cognito-auth.min.js"></script>
   <script src="/aws-sdk-2.384.0.min.js"></script>
-
-  <!-- pollyfill sessionStorage -->
-  <script>
-
-    (function () {
-
-      if (typeof sessionStorage !== 'undefined') {
-        return;
-      }
-
-      sessionStorage = new CookieStorage();
-
-    })();
-
-  </script>
-
   <script src="/vault.min.js"></script>
 
 </head>
 <body>
-  <header>
-  </header>
-  <main>
-    <table class="table table-striped">
-      <thead>
-      </thead>
-      <tbody>
-      </tbody>
-      <tfoot>
-      </tfoot>
-    </table>
-  </main>
-  <footer>
-  </footer>
+  <header></header>
+  <main></main>
+  <footer></footer>
 </body>
 </html>
+
+<!-- vim: set expandtab shiftwidth=2 syntax=xhtml: -->
